Category display implementation (WIP)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-main-dashboard></app-main-dashboard>
-<app-create-article-fab></app-create-article-fab>
+<div class="app">
+  <app-main-dashboard class="dashboard"></app-main-dashboard>
+  <app-create-article-fab></app-create-article-fab>
+</div>
