Category display implementation (WIP)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app">
-  <app-main-dashboard class="dashboard"></app-main-dashboard>
-  <app-create-article-fab></app-create-article-fab>
+  <h1 class="mat-h1">{{title}}</h1>
+  <h4 class="mat-h1">{{subtitle}}</h4>
+  <router-outlet></router-outlet>
 </div>
