--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,1 +1,7 @@
-<p>category works!</p>
+<div class="wrapper">
+  <div *ngFor="let i of news">
+    {{i.title}}
+  </div>
+</div>
+<app-create-article-fab></app-create-article-fab>
+
