--- a/src/components/main-dashboard/main-dashboard.component.css
+++ b/src/components/main-dashboard/main-dashboard.component.css
@@ -5,26 +5,21 @@
   height: 100%;
 }
 
+:host {
+  display: block;
+}
+
 .wrapper {
   padding: 15px;
   display: block;
   height: 100%;
 }
 
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-}
-
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
-}
-
-.dashboard-card-content {
-  text-align: center;
+.card-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
