Implemented article deletion

--- a/src/components/article-details/article-details.component.html
+++ b/src/components/article-details/article-details.component.html
@@ -47,7 +47,7 @@
       </div>
     </mat-card-content>
     <mat-card-actions align="end">
-      <button mat-raised-button color="primary" type="submit">Submit</button>
+      <button mat-raised-button color="primary" type="submit">Save</button>
     </mat-card-actions>
   </mat-card>
 </form>
