--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,26 @@
 <div class="app">
-  <h1 class="mat-h1">{{title}}</h1>
-  <h4 class="mat-h1">{{subtitle}}</h4>
+  <mat-toolbar>
+    <button
+      mat-icon-button
+      [matMenuTriggerFor]="menu"
+      class="example-icon"
+      aria-label="Example icon-button with menu icon">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item [routerLink]="['/dashboard']">
+        Dashboard
+      </button>
+      <button
+        mat-menu-item
+        [routerLink]="['/category', category.id]"
+        [routerLinkActive]="'active'"
+        *ngFor="let category of categories">
+        {{category.name}}
+      </button>
+    </mat-menu>
+    <span>{{title}}</span>
+    <span class="example-spacer"></span>
+  </mat-toolbar>
   <router-outlet></router-outlet>
 </div>
